--- a/locales/en.json
+++ b/locales/en.json
@@ -4,6 +4,7 @@
     },
     "header": {
         "home": "Home",
+        "account": "Account",
         "news": "News",
         "shop": "Shop",
         "download": "Download",
