--- a/locales/en.json
+++ b/locales/en.json
@@ -1,11 +1,21 @@
 {
+    "common": {
+        "or": "Or"
+    },
     "welcome": {
         "title": "Three countries, one goal - victory!",
         "description": "Join the epic battle of three powers in the world of Lineage 2! Choose your side, fight for honor and power, conquer territories and become a legend on the battlefield. Your fate is decided here!",
         "start": "Just a few steps away to start your adventure",
         "download": "Download",
         "create-account": "Create account",
-        "join-in-community": "Join in community"
+        "join-in-community": "Join in community",
+        "modal": {
+            "title": "Download Launcher",
+            "description": "The launcher is your key to adventures in the world of epic fantasy! Download it to install the game, receive regular updates and enjoy flawless gaming experience.",
+            "google-disk": "Google disk",
+            "mega": "Mega",
+            "site": "Saga Online"
+        }
     },
     "header": {
         "home": "Home",
