--- a/locales/en.json
+++ b/locales/en.json
@@ -3,6 +3,19 @@
         "name": "Saga Online",
         "or": "Or"
     },
+    "languages": {
+        "title": "Select language",
+        "english": "English",
+        "japanese": "日本語",
+        "russian": "Русский",
+        "chinese": "中文"
+    },
+    "language-codes": {
+        "english": "English",
+        "japanese": "Japanese",
+        "russian": "Russian",
+        "chinese": "Chinese"
+    },
     "welcome": {
         "title": "Three countries, one goal - victory!",
         "description": "Join the epic battle of three powers in the world of Lineage 2! Choose your side, fight for honor and power, conquer territories and become a legend on the battlefield. Your fate is decided here!",
