--- a/locales/ru.json
+++ b/locales/ru.json
@@ -1,45 +1,44 @@
 {
-    "sign-up": "Регистрация",
-
+    "common": {
+        "name": "Saga Online",
+        "or": "или"
+    },
     "languages": {
+        "title": "Выберите язык",
         "english": "English",
-        "spanish": "Español",
-        "french": "Français",
-        "armenian": "Հայերեն",
         "japanese": "日本語",
         "russian": "Русский",
-        "ukrainian": "Українська",
         "chinese": "中文"
     },
     "language-codes": {
         "english": "Английский",
-        "spanish": "Испанский",
-        "french": "Французский",
-        "armenian": "Армянский",
         "japanese": "Японский",
         "russian": "Русский",
-        "ukrainian": "Украинский",
         "chinese": "Китайский"
     },
     "welcome": {
-        "title": "Исследуйте Вселенную С Ota-ku",
-        "description": "Ota-Ku — это ваша персональная вселенная аниме, доступная 24/7. Погружайтесь в мир захватывающих аниме-сериалов и фильмов в любое время и в любом месте, используя наши мобильные приложения, веб-версию и ТВ-платформу. Мы предлагаем обширную библиотеку, включающую всё: от свежих релизов и культовых классиков до редких жемчужин, которые вы могли пропустить.\n\nС Ota-Ku легко создавать и управлять персонализированным списком просмотра, чтобы не пропускать новые эпизоды ваших любимых сериалов и всегда находить что-то новое. Наслаждайтесь совместным просмотром с друзьями, а также многими другими функциями, которые сделают ваше аниме-путешествие ещё более увлекательным.",
-        "start-watching-now": "Начать смотреть сейчас",
-        "advantages": {
-            "title": "Мы предоставляем вам опыт потокового вещания на различных устройствах.",
-            "description": "С Ota-Ku вы можете наслаждаться любимыми фильмами и телепередачами в любое время и в любом месте. Наша платформа разработана таким образом, чтобы быть совместимой с множеством устройств, гарантируя, что вы не пропустите ни единого момента развлечений."
-        },
-        "faq": {
-            "title": "Часто задаваемые вопросы",
-            "description": "В этом разделе вы найдете ответы на самые распространенные вопросы о нашем сервисе Ota-Ku, включая информацию о подписке, поддерживаемых устройствах, функциях и многом другом. Если у вас есть вопросы, которые здесь не освещены, пожалуйста, свяжитесь с нашей службой поддержки."
-        },
-        "subscription": {
-            "title": "Станьте премиум пользователем",
-            "description": "Получите доступ к эксклюзивному контенту, смотрите аниме без рекламы, получайте ранний доступ к новым релизам и пользуйтесь дополнительными функциями с нашей премиум подпиской. Оформите подписку по доступной цене и наслаждайтесь аниме в лучшем качестве, при этом поддерживая развитие нашего сайта!",
-            "subscribe": "Подписатся",
-            "months": "В неделею",
-            "years": "В год",
-            "six-months": "за 6 месяцев"
+        "title": "Три страны, одна цель – победа!",
+        "description": "Присоединяйся к эпической битве трёх сил в мире Lineage 2! Выбери свою сторону, сражайся за честь и могущество, завоёвывай территории и стань легендой на поле боя. Твоя судьба решается здесь!",
+        "start": "До начала твоего приключения всего несколько шагов",
+        "download": "Скачать",
+        "create-account": "Создать аккаунт",
+        "join-in-community": "Присоединиться к сообществу",
+        "modal": {
+            "download-modal": {
+                "title": "Скачать лаунчер",
+                "description": "Лаунчер — это твой ключ к приключениям в мире эпической фантастики! Скачай его, чтобы установить игру, получать регулярные обновления и наслаждаться безупречным игровым процессом.",
+                "google-disk": "Google Диск",
+                "mega": "Mega",
+                "footer-text": "После загрузки файла лаунчера, Launcher.exe, создайте новую папку и переместите туда файл Launcher.exe. Затем запустите его от имени администратора, чтобы избежать возможных проблем с правами доступа и обеспечить правильную установку."
+            }
         }
+    },
+    "header": {
+        "home": "Главная",
+        "account": "Аккаунт",
+        "news": "Новости",
+        "shop": "Магазин",
+        "download": "Скачать",
+        "knowledge-base": "База знаний"
     }
 }
