add latsets news

--- a/locales/ja.json
+++ b/locales/ja.json
@@ -31,6 +31,10 @@
                 "mega": "メガ",
                 "footer-text": "ランチャーファイル「Launcher.exe」をダウンロードした後、新しいフォルダーを作成し、Launcher.exeファイルをその中に移動してください。その後、管理者として実行することで、アクセス権の問題を回避し、正しいインストールを確実に行えます。"
             }
+        },
+        "latest-news": {
+            "title": "最新ニュース",
+            "description": "サーバーの最新情報をお見逃しなく！イベント、バランス調整、新しいコンテンツのリリースなどについての詳細をチェックしましょう。"
         }
     },
     "header": {
