--- a/locales/ru.json
+++ b/locales/ru.json
@@ -31,6 +31,10 @@
                 "mega": "Mega",
                 "footer-text": "После загрузки файла лаунчера, Launcher.exe, создайте новую папку и переместите туда файл Launcher.exe. Затем запустите его от имени администратора, чтобы избежать возможных проблем с правами доступа и обеспечить правильную установку."
             }
+        },
+        "latest-news": {
+            "title": "Последние новости",
+            "description": "Будьте в курсе последних обновлений на сервере! Узнайте об предстоящих событиях, изменениях баланса, новых выпусках контента и многом другом."
         }
     },
     "header": {
