--- a/locales/en.json
+++ b/locales/en.json
@@ -31,6 +31,10 @@
                 "mega": "Mega",
                 "footer-text": "After downloading the launcher file, Launcher.exe, create a new folder and move the Launcher.exe file into it. Then run it as an administrator to avoid any possible access rights issues and ensure correct installation."
             }
+        },
+        "latest-news": {
+            "title": "Latest news",
+            "description": "Stay updated with the latest developments on the server! Read about upcoming events, balance changes, new content releases, and more."
         }
     },
     "header": {
@@ -40,5 +44,8 @@
         "shop": "Shop",
         "download": "Download",
         "knowledge-base": "Knowledge base"
+    },
+    "statistics": {
+        "title": "Statistics"
     }
 }
