--- a/locales/zh.json
+++ b/locales/zh.json
@@ -31,6 +31,10 @@
                 "mega": "Mega",
                 "footer-text": "下载启动器文件Launcher.exe后，创建一个新文件夹，并将Launcher.exe文件移至其中。然后以管理员身份运行它，以避免可能的权限问题并确保正确安装。"
             }
+        },
+        "latest-news": {
+            "title": "最新新闻",
+            "description": "了解服务器的最新动态！查看即将到来的活动、平衡性调整、新内容发布等详情。"
         }
     },
     "header": {
