--- a/locales/ja.json
+++ b/locales/ja.json
@@ -35,6 +35,10 @@
         "latest-news": {
             "title": "最新ニュース",
             "description": "サーバーの最新情報をお見逃しなく！イベント、バランス調整、新しいコンテンツのリリースなどについての詳細をチェックしましょう。"
+        },
+        "statistics": {
+            "title": "統計",
+            "description": "サーバーの詳細な統計を確認しましょう！プレイヤーランキング、戦闘結果、領土の征服などをチェックしてください。自分のパフォーマンスとライバルの状況を把握しましょう！"
         }
     },
     "header": {
