--- a/locales/ru.json
+++ b/locales/ru.json
@@ -35,6 +35,10 @@
         "latest-news": {
             "title": "Последние новости",
             "description": "Будьте в курсе последних обновлений на сервере! Узнайте об предстоящих событиях, изменениях баланса, новых выпусках контента и многом другом."
+        },
+        "statistics": {
+            "title": "Статистика",
+            "description": "Изучите подробную статистику сервера! Проверьте рейтинги игроков, результаты битв, завоевания территорий и многое другое. Будьте в курсе своих успехов и успехов соперников!"
         }
     },
     "header": {
