--- a/locales/zh.json
+++ b/locales/zh.json
@@ -35,6 +35,10 @@
         "latest-news": {
             "title": "最新新闻",
             "description": "了解服务器的最新动态！查看即将到来的活动、平衡性调整、新内容发布等详情。"
+        },
+        "statistics": {
+            "title": "统计",
+            "description": "探索服务器的详细统计数据！查看玩家排名、战斗结果、领土征服等信息。了解自己的表现和竞争对手的情况！"
         }
     },
     "header": {
