--- a/locales/en.json
+++ b/locales/en.json
@@ -52,5 +52,12 @@
         "shop": "Shop",
         "download": "Download",
         "knowledge-base": "Knowledge base"
+    },
+    "footer": {
+        "contact-us": "Contact us",
+        "our-services": "Our Services",
+        "privacy-policy": "Privacy Policy",
+        "terms-and-conditions": "Terms & Conditions",
+        "copyright": "Copyright © 2024 - All rights reserved || Designed By: VAHE❤\uFE0F"
     }
 }
