--- a/locales/ja.json
+++ b/locales/ja.json
@@ -48,5 +48,12 @@
         "shop": "ショップ",
         "download": "ダウンロード",
         "knowledge-base": "知識ベース"
+    },
+    "footer": {
+        "contact-us": "お問い合わせ",
+        "our-services": "私たちのサービス",
+        "privacy-policy": "プライバシーポリシー",
+        "terms-and-conditions": "利用規約",
+        "copyright": "著作権 © 2024 - 全著作権所有 || デザイン: VAHE❤"
     }
 }
