--- a/locales/en.json
+++ b/locales/en.json
@@ -58,6 +58,6 @@
         "our-services": "Our Services",
         "privacy-policy": "Privacy Policy",
         "terms-and-conditions": "Terms & Conditions",
-        "copyright": "Copyright © 2024 - All rights reserved || Designed By: VAHE❤\uFE0F"
+        "copyright": "© Copyright 2024 all rights reserved"
     }
 }
