--- a/locales/ru.json
+++ b/locales/ru.json
@@ -54,6 +54,6 @@
         "our-services": "Наши услуги",
         "privacy-policy": "Политика конфиденциальности",
         "terms-and-conditions": "Правила и условия",
-        "copyright": "Авторское право © 2024 - Все права защищены || Дизайн: VAHE❤"
+        "copyright": "© Авторское право 2024 - Все права защищены"
     }
 }
