--- a/locales/zh.json
+++ b/locales/zh.json
@@ -54,6 +54,6 @@
         "our-services": "我们的服务",
         "privacy-policy": "隐私政策",
         "terms-and-conditions": "条款与条件",
-        "copyright": "版权 © 2024 - 保留所有权利 || 设计者: VAHE❤"
+        "copyright": "© 版权 2024 - 保留所有权利"
     }
 }
