--- a/locales/ja.json
+++ b/locales/ja.json
@@ -54,6 +54,6 @@
         "our-services": "私たちのサービス",
         "privacy-policy": "プライバシーポリシー",
         "terms-and-conditions": "利用規約",
-        "copyright": "著作権 © 2024 - 全著作権所有 || デザイン: VAHE❤"
+        "copyright": "© 著作権 2024 - 全著作権所有"
     }
 }
