add white theme

--- a/locales/en.json
+++ b/locales/en.json
@@ -22,7 +22,7 @@
         "start": "Just a few steps away to start your adventure",
         "download": "Download",
         "create-account": "Create account",
-        "join-in-community": "Join in community",
+        "join-in-community": "In community",
         "modal": {
             "download-modal": {
                 "title": "Download Launcher",
