--- a/locales/ru.json
+++ b/locales/ru.json
@@ -22,7 +22,7 @@
         "start": "До начала твоего приключения всего несколько шагов",
         "download": "Скачать",
         "create-account": "Создать аккаунт",
-        "join-in-community": "Присоединиться к сообществу",
+        "join-in-community": "К сообществу",
         "modal": {
             "download-modal": {
                 "title": "Скачать лаунчер",
